Hack/main/default/objects/Monster__c/fields/Current_HP__c.field-meta.xml
<CustomField>
    <fullName>Current_HP__c</fullName>
    <description>c</description>
    <label>Current_HP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>