Hack/main/default/objects/Monster__c/fields/Damage__c.field-meta.xml
<CustomField>
    <fullName>Damage__c</fullName>
    <description>c</description>
    <label>Damage</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>