Hack/main/default/objects/Monster__c/fields/Defense__c.field-meta.xml
<CustomField>
    <fullName>Defense__c</fullName>
    <description>c</description>
    <label>Defense</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>