Hack/main/default/objects/Monster__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>s</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>