Hack/main/default/objects/Monster__c/fields/Health__c.field-meta.xml
<CustomField>
    <fullName>Health__c</fullName>
    <description>s</description>
    <label>Health</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>