Hack/main/default/objects/Monster__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <description>s</description>
    <externalId>true</externalId>
    <label>Number</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>