Hack/main/default/objects/Monster__c/validationRules/Yep.validationRule-meta.xml
<ValidationRule>
    <fullName>Yep</fullName>
    <active>true</active>
    <errorConditionFormula>Number__c &gt; 0</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Yessir</errorMessage>
</ValidationRule>